# neo4j-prez

./: Readme.md  cheatsheet.md  compare.py  connection.conf  generator.py  main.py  pyproject.toml
data/: cities.txt
